--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.github.aqiu202</groupId>
     <artifactId>captcha-spring-boot-starter</artifactId>
-    <version>0.0.1</version>
+    <version>0.0.2</version>
     <packaging>jar</packaging>
     <name>captcha-spring-boot-starter</name>
     <url>https://github.com/aqiu202/captcha-spring-boot-starter</url>
@@ -24,7 +24,7 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
 <!--        <maven.deploy.skip>true</maven.deploy.skip>-->
-        <captcha.version>0.0.1</captcha.version>
+        <captcha.version>0.0.2</captcha.version>
         <spring.web.version>2.3.2.RELEASE</spring.web.version>
     </properties>
     <developers>
@@ -35,19 +35,6 @@
             <timezone>+8</timezone>
         </developer>
     </developers>
-
-    <distributionManagement>
-        <snapshotRepository>
-            <id>sonatype-nexus-snapshots</id>
-            <name>sonatype-nexus-snapshots</name>
-            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
-        </snapshotRepository>
-        <repository>
-            <id>sonatype-nexus-staging</id>
-            <name>sonatype-nexus-staging</name>
-            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-        </repository>
-    </distributionManagement>
 
     <dependencies>
         <dependency>
@@ -62,6 +49,20 @@
             <optional>true</optional>
         </dependency>
     </dependencies>
+
+    <distributionManagement>
+        <repository>
+            <id>${distribution.repository.id}</id>
+            <name>nexus-releases</name>
+            <url>${distribution.repository.url}</url>
+            <uniqueVersion>true</uniqueVersion>
+        </repository>
+        <snapshotRepository>
+            <id>${distribution.snapshotRepository.id}</id>
+            <name>nexus-snapshots</name>
+            <url>${distribution.snapshotRepository.url}</url>
+        </snapshotRepository>
+    </distributionManagement>
 
     <build>
         <plugins>
