pom.xml更换开源协议

--- a/pom.xml
+++ b/pom.xml
@@ -10,10 +10,9 @@
     <description>A captcha generation engine for Spring Boot Application</description>
     <licenses>
         <license>
-            <name>Server Side Public License</name>
-            <url>https://www.mongodb.com/licensing/server-side-public-license</url>
+            <name>The Apache Software License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
             <distribution>repo</distribution>
-            <comments>A not business-friendly OSS license</comments>
         </license>
     </licenses>
     <scm>
